<?xml version="1.0"?>
<package format="2">
  <name>kinect_tilt_calibration</name>
  <version>0.1.0</version>
  <description>Calibration tool to estimate the pitch and roll angle of a Kinect-type depth sensor.</description>

  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/kinect_tilt_calibration</url> -->
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>kindr_ros</depend>
</package>